2003-06-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/FtmStyleDescendants.py: handle missing "endnotes"
	* src/DisplayTrace.py: identify more linux versions
	* src/gramps_main.py: fix callbacks for reports
	* src/plugins/ReorderIds.py: handle integers larger that 32bit
	* src/Plugins.py: keep a separate lists for formats that support
	the book format
	* src/docgen/PdfDoc.py: register as a format supporting books
	* src/docgen/OpenOfficeDoc.py: register as a format supporting books
	* src/plugins/BookReport.py: Support different lists for books
	
2003-06-28  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/WriteGedcom.py: Convert line end string to chosen
	encoding (prevents traceback).

2003-06-28  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WriteGedcom.py: support different end of line characters
	* src/GedcomInfo.py: support different end of line characters
	* src/data/gedcom.xml: indicate cr-lf for Windows based tools

2003-06-27  Tim Waugh  <twaugh@redhat.com>
	* src/PlaceView.py: Fix removal of unreferenced places.
	* src/plugins/WebPage.py: Make source links work.
	* src/EditPerson.py: Place keys are unicode.
	* src/plugins/Ancestors.py: Include source reference notes.  Made
	source citation optional.  Adjusted styles.

2003-06-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/IndivComplete.py: make compatible with BookReport
	* src/plugins/IndivSummary.py: changed style names to use colon qualifiers

2003-06-26  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/WebPage.py: Fix gendex creation.
	* src/ImgManip.py: Seems to need the SIGCHLD handler resetting here
	to prevent EINTR causing traceback.
	* src/plugins/Ancestors.py: Cite sources.

2003-06-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/Makefile.am: Added BookReport.py

2003-06-26  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Include notes for principal names.